compiler/fir/analysis-tests/testData/extendedCheckers/RedundantCallOfConversionMethod/long.kt
// WITH_RUNTIME
val foo = Long.MAX_VALUE.<!REDUNDANT_CALL_OF_CONVERSION_METHOD!>toLong()<!>